--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "name": "e-newspaper",
   "version": "1.0.0",
   "description": "HCMUTE - Web Programming Cousrse",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js"
+    "start": "node main.js",
+    "watch": "nodemon --ext *"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "4.6",
+    "connect-livereload": "^0.6.1",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.18.1",
     "knex": "^3.1.0",
+    "livereload": "^0.9.3",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
+    "nodemon": "^3.1.9",
     "numeral": "^2.0.6"
   }
 }
