--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "bootstrap": "4.6",
+    "bootstrap": "^5.3.3",
     "connect-livereload": "^0.6.1",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
