--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.18.1",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.9.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "sequelize": "^6.37.5"
   }
 }
