--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.9.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
+    "nodemailer": "^6.9.16",
     "numeral": "^2.0.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
