--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "numeral": "^2.0.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.6.13",
+    "toastr": "^2.1.4"
   }
 }
