--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cheerio": "^1.0.0",
     "connect-livereload": "^0.6.1",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.18.1",
+    "fs-extra": "^11.2.0",
     "knex": "^3.1.0",
     "livereload": "^0.9.3",
     "moment": "^2.30.1",
