--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^3.1.9",
     "numeral": "^2.0.6",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.5",
     "sweetalert": "^2.1.2",
