Thêm module để làm reCaptcha

--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "mongoose": "^8.9.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "numeral": "^2.0.6",
+    "openai": "^4.77.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
